updated hbase settings for maprfs